--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -19,3 +19,13 @@
 //$sidebar-pad-medium: 15px;
 //$sidebar-pad-wide: 20px;
 //$sidebar-width-wide: 300px;
+
+//body > footer {
+//  margin-top: 20em;
+//}
+
+#content > div > article > div {
+  padding-bottom: 5em;
+  border-bottom: 1px solid black;
+}
+
