--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,20 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+
+blockquote {
+  $bq-margin:   1.2em;
+  color:        lighten($header-bg, 20);
+  font-style:   italic;
+  position:     relative;
+  font-size:    1.0em;
+  line-height:  1.0em;
+  padding-left: 1em;
+  margin-left:  2em;
+  border-left:  0;
+}
+
+h3 {
+  margin-top: 2em;
+  border-bottom: 4px solid rgba($text-color-light, .5);
+}
+
